# blackjack-crew

./: .env.example  .gitignore  README.md  pyproject.toml
src/blackjack_crew/: __init__.py  __main__.py  cli.py
src/blackjack_crew/agents/: __init__.py  crew.py  factory.py  personas.py  tools.py
src/blackjack_crew/game/: __init__.py  cards.py  engine.py  rules.py  state.py
src/blackjack_crew/ui/: __init__.py  display.py
tests/: test_cards.py  test_rules.py  test_state.py
